package back.enums;

public enum BookType {
  electronic,
  physical
}
