package back.enums;

public enum FileType {
  image,
  video,
  audio,
  pdf
}
