package back.enums;

public enum Role {
  guest,
  user,
  admin
}